public/custom.css
/*Body Styles*/

.back-gray {
  background-color: rgba(208, 208, 208, 1);
}

/*Default Pure CSS styling (mostly grid)*/
.l-box {
  padding: 1em;
}

.pure-g>div {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

html, button, input, select, textarea, .pure-g [class *="pure-u"] {
  /* Set your content font stack here: */
  font-family: Roboto;
}

.button-success, .button-error, .button-warning, .button-secondary {
  color: white;
  border-radius: 4px;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

/*Buttons*/


.button-success {
  background: rgb(28, 184, 65);
  /* this is a green */
}

.button-error {
  background: rgb(202, 60, 60);
  /* this is a maroon */
}

.button-warning {
  background: rgb(223, 117, 20);
  /* this is an orange */
}

.pure-button-disabled {
  background: rgba(66, 184, 221, .75);
}

/*Card Layout*/

.light-gray {
  background-color: rgba(100, 100, 100, .1);
}

.grid-box {
  height: 600px;
  width: 400px;
}

img {
  min-height: 300px;
  min-width: 200px;
  max-height: 400px;
  max-width: 300px;
  overflow: hidden;
}

.title {
  min-width: 400px;
  overflow: scroll;
}

.description {
  min-height: 100px;
  min-width: 250px;
  overflow: scroll;
}

/*Nav Menu*/
.center {
  text-align: center;
}

.green {
  background: rgba(28, 184, 65, .5);
}

/*Controls*/

.controls {
  margin-left: 20px;
}

.search-bar {
  margin-bottom: 20px;
}

.new-button {
  margin-top: 20px;
  margin-right: 20px;
}

